[tool.poetry]
name = "autoOwo"
version = "0.0.4"
description = "Auto Selfbot owo"
authors = ["MoeZilla"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.0.1"
flask = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
